# Shell

./: CMakeLists.txt  command_parser.c  command_parser.h  commands.c  commands.h  custom_types.c  custom_types.h  environment.c  environment.h  file_processing.c  file_processing.h  main.c  map.c  map.h  utils.c  utils.h  variables.c
